# tryout-djangox

./: pyproject.toml
tryout/: asgi.py  settings.py  wsgi.py
